# maney

./: .env.example  .gitignore  AGENTS.md  README.ja.md  README.md  main.py  pyproject.toml
.github/workflows/: quality.yml
configs/: backtest.yaml  japan_baseline.yaml  kabus.validation.yaml  local.yaml  research_agent.disabled.yaml  sample.yaml
data/samples/: assets.csv  market_bars.csv  text_items.jsonl
docs/: README.md  architecture.md  backtesting.md  broker.md  compliance.md  configuration.md  data_contracts.md  development.md  features_and_models.md  getting_started.md  glossary.md  input_data.md  japan_baseline.md  outputs.md  research_protocol.md  troubleshooting.md  workflows.md
src/nlp_trader/: __init__.py  agent_study.py  calendars.py  cli.py  config.py  experiment_execution.py  holdout_execution.py  logging.py  market_timing.py  pipeline.py  providers.py  reports.py  research.py  timestamps.py
tests/: conftest.py
tests/acceptance/: test_llama_cpp_qwen.py
tests/fixtures/: transformer_sentiment_golden.jsonl
tests/integration/: test_agent_development_execution.py  test_agent_holdout_reveal.py  test_llm_annotations_pipeline.py  test_research_agent_export.py  test_research_agent_replay.py  test_research_agent_robustness.py  test_research_agent_workflow.py  test_selector_signal_matrix.py  test_smoke.py
tests/property/: test_research_invariants.py
tests/regression/: test_agent_architecture_baseline.py  test_agent_broker_isolation.py  test_agent_import_isolation.py  test_broker_locking_unchanged.py  test_generated_reproducibility.py  (+2 more)
(+119 files in other folders)
