[project]
name = "nlp-trader"
version = "0.1.0"
description = "Local-first research pipeline for point-in-time market and text strategy experiments."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "duckdb>=1.3.2",
    "exchange-calendars>=4.11.1",
    "numpy>=2.2.6",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.0",
    "typer>=0.16.0",
]

[project.optional-dependencies]
llm = [
    "llama-cpp-python==0.3.34",
]
nlp = [
    "torch>=2.7.1,<3; sys_platform == 'darwin'",
    "transformers>=4.53.0,<6",
]

[project.scripts]
nlp-trader = "nlp_trader.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "hypothesis>=6.135",
    "mypy>=1.13",
    "pytest>=8.3",
    "ruff>=0.8",
    "types-pyyaml>=6.0.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
packages = ["nlp_trader"]
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
markers = [
    "acceptance: opt-in tests that use a pre-provisioned real local model",
]
